<resources>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="setup_login_password">Setup Login Password</string>
    <string name="enter_password_to_continue">Enter Password to Continue</string>
    <string name="instructions">Enter Password or Fingerprint to Continue</string>
    <string name="sidebar_title">Open</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="accounts">Accounts</string>
    <string name="bank">Bank</string>
    <string name="cash">Cash</string>
    <string name="expense">Expense</string>
    <string name="creditor">Creditor</string>
    <string name="debtor">Debtor</string>
    <string name="sales">Sales</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="balance">Balance</string>
    <string name="total">TOTAL</string>
    <string name="s_no">S.No.</string>
    <string name="particulars">Particulars</string>
    <string name="amount">Amount</string>
    <string name="to">To</string>
    <string name="location">Location</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="set_date">Set Date</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="Extra_AccView_Name">Extra_AccView_Name</string>
    <string name="Extra_AccView_Id">Extra_AccView_Id</string>
    <string name="Extra_NewAcc_Type">Extra_NewAcc_Type</string>
    <string name="Extra_AccountsView_TID">Extra_AccountsView_TID</string>
    <string name="SharedPreferencesName">SharedPrefs</string>
    <string name="Key_UseFingerprint">Key_UseFingerprint</string>
    <string name="Key_PasswordValue">Key_PasswordValue</string>
    <string name="Key_InitAccount">Key_InitAccount</string>
    <string name="Key_A_Count">Key_A_Count</string>
    <string name="Key_TransactionID">Key_TransactionID</string>
    <string name="Key_ConfirmDialog">Key_ConfirmDialog</string>
    <string name="Key_T_Count">Key_T_Count</string>
    <string name="Key_R_Count">Key_R_Count</string>
    <string name="change_password">Change Password</string>
    <string name="clear_data">Clear Data</string>
    <string name="confirmation">Confirmation</string>
    <string name="new_receipt">New Receipt</string>
    <string name="logout">Logout</string>
    <string name="type">Type</string>
    <string name="do_not_show_confirm_dialog_again">Do not show Confirm Dialog Again</string>
    <string name="Extra_AccountsView_Type">Extra_AccountsView_Type</string>
    <string name="Extra_AccView_Type">Extra_AccView_Type</string>
    <string-array name="Acc_Types">
        <item>Bank</item>
        <item>Cash</item>
        <item>Expense</item>
        <item>Creditor</item>
        <item>Debtor</item>
        <item>Sales</item>
    </string-array>
</resources>
