<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="start"
        android:id="@+id/accounts_title_sno"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/s_no"/>

    <TextView
        android:id="@+id/accounts_title_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:gravity="start"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/name" />

    <TextView
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:id="@+id/accounts_title_debit"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/debit"/>

    <TextView
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:id="@+id/accounts_title_credit"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/credit"/>

    <TextView
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:id="@+id/accounts_title_balance"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/balance"/>

</LinearLayout>