<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingTop="2dp">

    <TextView
        android:id="@+id/accounts_item_sno"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="3"
        android:background="@color/colorAccent"
        android:gravity="start"
        android:hint="@string/s_no"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/accounts_item_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:background="@color/colorAccent"
        android:gravity="start"
        android:hint="@string/name"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/accounts_item_debit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/colorAccent"
        android:gravity="end"
        android:hint="@string/debit"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/accounts_item_credit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/colorAccent"
        android:gravity="end"
        android:hint="@string/credit"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/accounts_item_balance"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="4"
        android:background="@color/colorAccent"
        android:gravity="end"
        android:hint="@string/balance"
        android:padding="5dp"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>
