<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="start"
        android:id="@+id/accounts_view_item_sno"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/s_no"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:background="@color/colorAccent"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/account_view_item_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:gravity="start"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:hint="@string/particulars"
        android:background="@color/colorAccent"
        android:textSize="15sp"/>

    <TextView
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:id="@+id/account_view_item_debit"
        android:padding="5dp"
        android:textStyle="bold"
        android:hint="@string/debit"
        android:background="@color/colorAccent"
        android:textSize="15sp"/>

    <TextView
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:id="@+id/account_view_item_credit"
        android:padding="5dp"
        android:textStyle="bold"
        android:hint="@string/credit"
        android:background="@color/colorAccent"
        android:textSize="15sp"/>

    <TextView
        android:layout_weight="4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="end"
        android:id="@+id/account_view_item_balance"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/balance"
        android:background="@color/colorAccent"
        android:textSize="15sp"/>

</LinearLayout>
