<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    tools:context=".Settings"
    android:orientation="vertical">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/settings_fingerprint_cb"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/use_fingerprint"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/settings_confirmation_cb"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="@string/confirmation"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/change_password"
        android:onClick="ChangePass"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/clear_data"
        android:onClick="ClearData"
        android:layout_gravity="center"/>

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="10dp"-->
        <!--android:text="SAVE"-->
        <!--android:onClick="SAVE"-->
        <!--android:layout_gravity="center"/>-->

</LinearLayout>