<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditReceipt">

    <TextView
        android:id="@+id/edit_receipt_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:hint="@string/set_date"
        android:onClick="setDate"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/name">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:completionThreshold="1"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/edit_receipt_name_actv"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/to">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="textCapWords"
            android:completionThreshold="1"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:id="@+id/edit_receipt_to_actv"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/receipt_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/amount"
        android:textAlignment="viewStart"
        android:gravity="start" >

        <EditText
            android:id="@+id/edit_receipt_amount_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start"
            android:inputType="number"
            android:hint="@string/amount"
            android:textAlignment="viewStart" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:id="@+id/submit_button"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:onClick="Submit"/>

</LinearLayout>